--- a/styles/globals.css
+++ b/styles/globals.css
@@ -192,7 +192,16 @@
   .go:focus::after {
     opacity: 1;
   }
-  
-  
 
-
+  :root {
+    --clr--neon-red: #FF0000;
+  }
+ .ticker-blue{
+  box-shadow: 0 0 2em 0.2em var(--clr-neon-blue);
+ }
+ .ticker-pink{
+  box-shadow: 0 0 2em 0.2em var(--neon-color);
+ }
+ .ticker-red{
+  box-shadow: 0 0 2em 0.2em var(--clr--neon-red);
+ }
