--- a/styles/globals.css
+++ b/styles/globals.css
@@ -630,6 +630,13 @@ p{
     height: 32px;
   }
 }
+.democrata{
+  color: rgb(18, 37, 205);
+}
 
-
-
+.minarquista{
+  color: rgb(136, 19, 157);
+}
+.ancap{
+  color:rgb(204, 23, 17)
+}
